# fallingsand

./: .gitignore  CMakeLists.txt  Makefile  README.md  notebook.ipynb  piskeltosand.py
assets/: .$fallingsand-logic.drawio.bkp  fallingsand-logic.drawio  sample-1.sand  sample-2.sand  sample-3.sand  sample-4.sand
assets/piskels/: sample-1.piskel  sample-2.piskel  sample-3.piskel
documentation/: 0 - Introduzione.typ  0a - Struttura del codice.typ  0b - Implementazione base.typ  1 - Ottimizzazioni SIMD.typ  1 - cuda.typ  2 - Ottimizzazioni Cuda.typ  2 - cuda.typ  3 - Conclusioni.typ  3 - profiling.typ  abstract.typ  bib.bib  document-flow.typ  functions.typ  index.typ  title-page.typ  z - Appendice.typ
documentation/assets/code/: implementazione-sequenziale.c
src/: cli.c  cli.h  graphics.c  graphics.h  io.c  io.h  logic.c  main.c  performance.c  performance.h  ppmgraphics.c  simulation.h  test.c  test.h  universe.c  universe.h
src/cuda/: check.cuh  cuda_context.cu  cuda_context.cuh  device_functions.cuh  kernels.cu  kernels.cuh  logic.cu
src/cuda/block-branchless/: kernels.cu  kernels.cuh  logic.cu
src/cuda/branchless/: kernels.cu  kernels.cuh
src/cuda/cpu-like/: kernels.cu  kernels.cuh  logic.cu
src/cuda/naive/: cuda_context.cu  cuda_context.cuh  device_functions.cu  kernels.cu  kernels.cuh  logic.cu
src/cuda/naive-algorithm/: kernels.cu  kernels.cuh
src/cuda/naive-plus/: cuda_context.cu  cuda_context.cuh  kernels.cu  kernels.cuh  logic.cu
src/cuda/optimized/: kernels.cu  kernels.cuh  logic.cu
src/cuda/other-algorithm/: kernels.cu  kernels.cuh  logic.cu
src/cuda/prova-no-condition/: file.cu  kernels.cu  kernels.cuh  logic.cu
src/cuda/single-branchless/: kernels.cu  kernels.cuh  logic.cu
src/cuda/super-optimized/: kernels.cu  kernels.cuh  logic.cu
src/simd/: less-effort-logic.c  simd-base.cpp  simd-manual-interleave-prefetch.cpp  simd-manual-interleave.cpp  simd-optimized-manual-prefetch.cpp  simd-optimized-manual-shuffle.cpp  simd-optimized.cpp
src/utility/: freeze.c  logicpure.c  ppmgraphics.c  utility-functions.h
